# reference-builds

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE.txt  README.md  licenses.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: capability.md
.github/workflows/: cicd.yaml
builds/: build_reference.py  prvi_reference.py
config/: example_ak.yaml  example_hi.yaml  example_prvi.yaml
src/reference_builds/: local_runner.py  logs.py  task_instance.py
src/reference_builds/configs/: __init__.py  prvi.py  reference_config.py
src/reference_builds/graph/: __init__.py  build_v22_graph.py  v22_graph.py
src/reference_builds/pipeline/: __init__.py  build_reference.py  download.py  processing.py  write.py
src/reference_builds/utils/: __init__.py  geoglows_graph.py  geometries.py  nhd_graph.py  usgs_graph.py
tests/: conftest.py  test_builds.py  test_geometry_utils.py
